Cập nhật api riêng cho hiển thị hình ảnh sản phẩm = resize kích thước 800x800